# investment-report-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  clipboard-20260517-085007.md  clipboard-20260517-132244.md  docker-compose.prod.yml  start.ps1  投资报告 Agent 技术实施任务列表.md  投资报告 Agent 技术风险解决方案.md  投资报告 Agent 需求文档审查报告.md  投资报告 Agent 需求文档改进待办事项列表.md  投资报告 Agent 项目执行计划 (MVP 阶段).md  投资报告 Agent 项目风险评估报告.md
backend/: .env.example  config.json  pyproject.toml
backend/src/agents/: orchestrator.py
backend/src/agents/analysis/: duan_agent.py  financial_analysis_agent.py  governance_agent.py  industry_agent.py  llm_subprocess.py  munger_agent.py  valuation_agent.py  value_judge_agent.py
backend/src/agents/assembly/: chart_agent.py  quick_summary_agent.py  report_engine.py  scan_card_agent.py  section_writer_agent.py  summary_agent.py
backend/src/agents/data/: financial_agent.py  (+5 more)
backend/src/api/: config_accessor.py  db.py  main.py  middleware.py  observability.py  security_headers.py
backend/src/calculators/: financial_ratios.py  valuation_engine.py
backend/src/config/: defaults.py  loader.py  schema.py
backend/src/export/: pdf_renderer.py  template_engine.py
backend/src/models/: financial.py  report.py  valuation.py
backend/src/providers/: akshare_provider.py  base.py  health.py  manager.py  qveris_provider.py  tradingagents_provider.py
backend/src/templates/: value_investor.json
backend/tests/integration/: test_pipeline.py
backend/tests/unit/: test_agent_orchestrator.py  test_config.py  test_financial_ratios.py  test_llm_subprocess.py  test_models.py  test_observability.py  test_production_readiness.py  test_providers.py  test_qveris_provider.py  test_report_engine.py  test_report_route_helpers.py  test_security_headers.py  test_tech_indicators_agent.py  test_template_engine.py  test_upload_security.py  test_valuation_engine.py
(+60 files in other folders)
