[project]
name = "investment-report-agent"
version = "0.1.0"
description = "Multi-Agent Investment Report Generation System"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pytest-xdist>=3.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
